  ``TypeError: not all arguments converted during string formatting``.

* Fix an issue where using -v with dependency links would cause an exception
  saying ``TypeError: 'InstallationCandidate' object is not iterable``.

* Fix an issue where upgrading distribute would cause an exception saying
  ``TypeError: expected string or buffer``.


**6.0.3 (2014-12-23)**

* Fix an issue where the implicit version check new in pip 6.0 could cause pip
  to block for up to 75 seconds if PyPI was not accessible.

* Make ``--no-index`` imply ``--disable-pip-version-check``.


**6.0.2 (2014-12-23)**

* Fix an issue where the output saying that a package was installed would
  report the old version instead of the new version during an upgrade.

* Fix left over merge conflict markers in the documentation.

* Document the backwards incompatible PEP 440 change in the 6.0.0 changelog.


**6.0.1 (2014-12-22)**

* Fix executable file permissions for Wheel files when using the distutils
  scripts option.

* Fix a confusing error message when an exceptions was raised at certain
  points in pip's execution.

* Fix the missing list of versions when a version cannot be found that matches
  the specifiers.

* Add a warning about the possibly problematic use of > when the given
  specifier doesn't match anything.

* Fix an issue where installing from a directory would not copy over certain
  directories which were being excluded, however some build systems rely on
  them.


**6.0 (2014-12-22)**

* **PROCESS** Version numbers are now simply ``X.Y`` where the leading ``1``
  has been dropped.

* **BACKWARD INCOMPATIBLE** Dropped support for Python 3.1.

* **BACKWARD INCOMPATIBLE** Removed the bundle support which was deprecated in
  1.4. (:pull:`1806`)

* **BACKWARD INCOMPATIBLE** File lists generated by `pip show -f` are now
  rooted at the location reported by show, rather than one (unstated)
  directory lower. (:pull:`1933`)
